aeon4/AeonParser.py
# Generated from Aeon.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class AeonParser ( Parser ):

    grammarFileName = "Aeon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'from'", "'type'", "'as'", 
                     "'if'", "'then'", "'else'", "'and'", "'where'", "'native'", 
                     "'\\'", "'.'", "':'", "','", "';'", "'='", "'->'", 
                     "'=>'", "'--->'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'_?_'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'", "'&&'", "'||'", "'!'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'!='", "'==='", "'!=='" ]

    symbolicNames = [ "<INVALID>", "IMPORT", "FROM", "TYPEE", "AS", "IF", 
                      "THEN", "ELSE", "AND", "WHERE", "NATIVE", "ABSTRACTION", 
                      "DOT", "COLON", "COMMA", "SEMICOLON", "ASSIGN", "RARROW", 
                      "FATARROW", "IMPLIE", "LBRACE", "RBRACE", "LPARENS", 
                      "RPARENS", "LBRACKET", "RBRACKET", "HOLE", "PLUS", 
                      "MINUS", "MULT", "QUOTIENT", "MODULE", "POWER", "CONJUNCTION", 
                      "DISJUNCTION", "NOT", "LT", "LE", "GT", "GE", "EQUAL", 
                      "DIFF", "BEQUAL", "BDIFF", "BOOLEAN", "INTEGER", "FLOAT", 
                      "STRING", "IDENTIFIER", "CLASS_NAME", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_aeon = 0
    RULE_imprt = 1
    RULE_importName = 2
    RULE_typeeAlias = 3
    RULE_typeeDeclaration = 4
    RULE_attribute = 5
    RULE_function = 6
    RULE_parameters = 7
    RULE_typee = 8
    RULE_fAbstraction = 9
    RULE_body = 10
    RULE_expression = 11

    ruleNames =  [ "aeon", "imprt", "importName", "typeeAlias", "typeeDeclaration", 
                   "attribute", "function", "parameters", "typee", "fAbstraction", 
                   "body", "expression" ]

    EOF = Token.EOF
    IMPORT=1
    FROM=2
    TYPEE=3
    AS=4
    IF=5
    THEN=6
    ELSE=7
    AND=8
    WHERE=9
    NATIVE=10
    ABSTRACTION=11
    DOT=12
    COLON=13
    COMMA=14
    SEMICOLON=15
    ASSIGN=16
    RARROW=17
    FATARROW=18
    IMPLIE=19
    LBRACE=20
    RBRACE=21
    LPARENS=22
    RPARENS=23
    LBRACKET=24
    RBRACKET=25
    HOLE=26
    PLUS=27
    MINUS=28
    MULT=29
    QUOTIENT=30
    MODULE=31
    POWER=32
    CONJUNCTION=33
    DISJUNCTION=34
    NOT=35
    LT=36
    LE=37
    GT=38
    GE=39
    EQUAL=40
    DIFF=41
    BEQUAL=42
    BDIFF=43
    BOOLEAN=44
    INTEGER=45
    FLOAT=46
    STRING=47
    IDENTIFIER=48
    CLASS_NAME=49
    LINE_COMMENT=50
    BLOCK_COMMENT=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AeonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AeonParser.EOF, 0)

        def imprt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.ImprtContext)
            else:
                return self.getTypedRuleContext(AeonParser.ImprtContext,i)


        def typeeAlias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.TypeeAliasContext)
            else:
                return self.getTypedRuleContext(AeonParser.TypeeAliasContext,i)


        def typeeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.TypeeDeclarationContext)
            else:
                return self.getTypedRuleContext(AeonParser.TypeeDeclarationContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.FunctionContext)
            else:
                return self.getTypedRuleContext(AeonParser.FunctionContext,i)


        def getRuleIndex(self):
            return AeonParser.RULE_aeon

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAeon" ):
                return visitor.visitAeon(self)
            else:
                return visitor.visitChildren(self)




    def aeon(self):

        localctx = AeonParser.AeonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_aeon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AeonParser.IMPORT:
                self.state = 24
                self.imprt()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AeonParser.TYPEE or _la==AeonParser.IDENTIFIER:
                self.state = 33
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 30
                    self.typeeAlias()
                    pass

                elif la_ == 2:
                    self.state = 31
                    self.typeeDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 32
                    self.function()
                    pass


                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(AeonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AeonParser.RULE_imprt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RegularImportContext(ImprtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AeonParser.ImprtContext
            super().__init__(parser)
            self.path = None # ImportNameContext
            self.copyFrom(ctx)

        def IMPORT(self):
            return self.getToken(AeonParser.IMPORT, 0)
        def SEMICOLON(self):
            return self.getToken(AeonParser.SEMICOLON, 0)
        def importName(self):
            return self.getTypedRuleContext(AeonParser.ImportNameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegularImport" ):
                return visitor.visitRegularImport(self)
            else:
                return visitor.visitChildren(self)


    class SpecialImportContext(ImprtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AeonParser.ImprtContext
            super().__init__(parser)
            self.path = None # ImportNameContext
            self.functionName = None # Token
            self.copyFrom(ctx)

        def IMPORT(self):
            return self.getToken(AeonParser.IMPORT, 0)
        def FROM(self):
            return self.getToken(AeonParser.FROM, 0)
        def SEMICOLON(self):
            return self.getToken(AeonParser.SEMICOLON, 0)
        def importName(self):
            return self.getTypedRuleContext(AeonParser.ImportNameContext,0)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecialImport" ):
                return visitor.visitSpecialImport(self)
            else:
                return visitor.visitChildren(self)



    def imprt(self):

        localctx = AeonParser.ImprtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_imprt)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = AeonParser.RegularImportContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(AeonParser.IMPORT)
                self.state = 41
                localctx.path = self.importName()
                self.state = 42
                self.match(AeonParser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = AeonParser.SpecialImportContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.match(AeonParser.IMPORT)
                self.state = 45
                localctx.path = self.importName()
                self.state = 46
                self.match(AeonParser.FROM)
                self.state = 47
                localctx.functionName = self.match(AeonParser.IDENTIFIER)
                self.state = 48
                self.match(AeonParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(AeonParser.DOT)
            else:
                return self.getToken(AeonParser.DOT, i)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def importName(self):
            return self.getTypedRuleContext(AeonParser.ImportNameContext,0)


        def getRuleIndex(self):
            return AeonParser.RULE_importName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportName" ):
                return visitor.visitImportName(self)
            else:
                return visitor.visitChildren(self)




    def importName(self):

        localctx = AeonParser.ImportNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            localctx.name = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==AeonParser.DOT or _la==AeonParser.IDENTIFIER):
                localctx.name = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AeonParser.DOT:
                self.state = 53
                self.match(AeonParser.DOT)
                self.state = 54
                self.importName()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeeAliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def TYPEE(self):
            return self.getToken(AeonParser.TYPEE, 0)

        def AS(self):
            return self.getToken(AeonParser.AS, 0)

        def typee(self):
            return self.getTypedRuleContext(AeonParser.TypeeContext,0)


        def SEMICOLON(self):
            return self.getToken(AeonParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def CLASS_NAME(self):
            return self.getToken(AeonParser.CLASS_NAME, 0)

        def getRuleIndex(self):
            return AeonParser.RULE_typeeAlias

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeeAlias" ):
                return visitor.visitTypeeAlias(self)
            else:
                return visitor.visitChildren(self)




    def typeeAlias(self):

        localctx = AeonParser.TypeeAliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeeAlias)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(AeonParser.TYPEE)
            self.state = 58
            localctx.name = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==AeonParser.IDENTIFIER or _la==AeonParser.CLASS_NAME):
                localctx.name = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 59
            self.match(AeonParser.AS)
            self.state = 60
            self.typee()
            self.state = 61
            self.match(AeonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t_abs = None # Token

        def TYPEE(self):
            return self.getToken(AeonParser.TYPEE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(AeonParser.IDENTIFIER)
            else:
                return self.getToken(AeonParser.IDENTIFIER, i)

        def typee(self):
            return self.getTypedRuleContext(AeonParser.TypeeContext,0)


        def LBRACE(self):
            return self.getToken(AeonParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AeonParser.RBRACE, 0)

        def FATARROW(self):
            return self.getToken(AeonParser.FATARROW, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.AttributeContext)
            else:
                return self.getTypedRuleContext(AeonParser.AttributeContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.FunctionContext)
            else:
                return self.getTypedRuleContext(AeonParser.FunctionContext,i)


        def getRuleIndex(self):
            return AeonParser.RULE_typeeDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeeDeclaration" ):
                return visitor.visitTypeeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeeDeclaration(self):

        localctx = AeonParser.TypeeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeeDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(AeonParser.TYPEE)
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 64
                localctx.t_abs = self.match(AeonParser.IDENTIFIER)
                self.state = 65
                self.match(AeonParser.FATARROW)


            self.state = 68
            self.match(AeonParser.IDENTIFIER)
            self.state = 69
            self.typee()
            self.state = 70
            self.match(AeonParser.LBRACE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AeonParser.IDENTIFIER:
                self.state = 73
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 71
                    self.attribute()
                    pass

                elif la_ == 2:
                    self.state = 72
                    self.function()
                    pass


                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(AeonParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varName = None # Token
            self.varType = None # TypeeContext

        def COLON(self):
            return self.getToken(AeonParser.COLON, 0)

        def SEMICOLON(self):
            return self.getToken(AeonParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def typee(self):
            return self.getTypedRuleContext(AeonParser.TypeeContext,0)


        def getRuleIndex(self):
            return AeonParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = AeonParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.varName = self.match(AeonParser.IDENTIFIER)
            self.state = 81
            self.match(AeonParser.COLON)
            self.state = 82
            localctx.varType = self.typee()
            self.state = 83
            self.match(AeonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.params = None # ParametersContext
            self.returnType = None # ParametersContext

        def LPARENS(self):
            return self.getToken(AeonParser.LPARENS, 0)

        def RPARENS(self):
            return self.getToken(AeonParser.RPARENS, 0)

        def RARROW(self):
            return self.getToken(AeonParser.RARROW, 0)

        def ASSIGN(self):
            return self.getToken(AeonParser.ASSIGN, 0)

        def SEMICOLON(self):
            return self.getToken(AeonParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.ParametersContext)
            else:
                return self.getTypedRuleContext(AeonParser.ParametersContext,i)


        def NATIVE(self):
            return self.getToken(AeonParser.NATIVE, 0)

        def LBRACE(self):
            return self.getToken(AeonParser.LBRACE, 0)

        def body(self):
            return self.getTypedRuleContext(AeonParser.BodyContext,0)


        def RBRACE(self):
            return self.getToken(AeonParser.RBRACE, 0)

        def WHERE(self):
            return self.getToken(AeonParser.WHERE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AeonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AeonParser.ExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(AeonParser.AND)
            else:
                return self.getToken(AeonParser.AND, i)

        def getRuleIndex(self):
            return AeonParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = AeonParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            localctx.name = self.match(AeonParser.IDENTIFIER)
            self.state = 86
            self.match(AeonParser.LPARENS)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AeonParser.IDENTIFIER:
                self.state = 87
                localctx.params = self.parameters()


            self.state = 90
            self.match(AeonParser.RPARENS)
            self.state = 91
            self.match(AeonParser.RARROW)
            self.state = 92
            localctx.returnType = self.parameters()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AeonParser.WHERE:
                self.state = 93
                self.match(AeonParser.WHERE)
                self.state = 94
                self.expression(0)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AeonParser.AND:
                    self.state = 95
                    self.match(AeonParser.AND)
                    self.state = 96
                    self.expression(0)
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(AeonParser.ASSIGN)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AeonParser.NATIVE]:
                self.state = 105
                self.match(AeonParser.NATIVE)
                pass
            elif token in [AeonParser.LBRACE]:
                self.state = 106
                self.match(AeonParser.LBRACE)
                self.state = 107
                self.body()
                self.state = 108
                self.match(AeonParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 112
            self.match(AeonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AeonParser.RULE_parameters

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultipleParametersContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AeonParser.ParametersContext
            super().__init__(parser)
            self.paramName = None # Token
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(AeonParser.COLON, 0)
        def COMMA(self):
            return self.getToken(AeonParser.COMMA, 0)
        def parameters(self):
            return self.getTypedRuleContext(AeonParser.ParametersContext,0)

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)
        def typee(self):
            return self.getTypedRuleContext(AeonParser.TypeeContext,0)

        def fAbstraction(self):
            return self.getTypedRuleContext(AeonParser.FAbstractionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleParameters" ):
                return visitor.visitMultipleParameters(self)
            else:
                return visitor.visitChildren(self)


    class SingleParameterContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AeonParser.ParametersContext
            super().__init__(parser)
            self.paramName = None # Token
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(AeonParser.COLON, 0)
        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)
        def typee(self):
            return self.getTypedRuleContext(AeonParser.TypeeContext,0)

        def fAbstraction(self):
            return self.getTypedRuleContext(AeonParser.FAbstractionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleParameter" ):
                return visitor.visitSingleParameter(self)
            else:
                return visitor.visitChildren(self)



    def parameters(self):

        localctx = AeonParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = AeonParser.SingleParameterContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                localctx.paramName = self.match(AeonParser.IDENTIFIER)
                self.state = 115
                self.match(AeonParser.COLON)
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.typee()
                    pass

                elif la_ == 2:
                    self.state = 117
                    self.fAbstraction()
                    pass


                pass

            elif la_ == 2:
                localctx = AeonParser.MultipleParametersContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                localctx.paramName = self.match(AeonParser.IDENTIFIER)
                self.state = 121
                self.match(AeonParser.COLON)
                self.state = 124
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.typee()
                    pass

                elif la_ == 2:
                    self.state = 123
                    self.fAbstraction()
                    pass


                self.state = 126
                self.match(AeonParser.COMMA)
                self.state = 127
                self.parameters()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AeonParser.RULE_typee

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypee" ):
                return visitor.visitTypee(self)
            else:
                return visitor.visitChildren(self)




    def typee(self):

        localctx = AeonParser.TypeeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typee)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(AeonParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FAbstractionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AeonParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AeonParser.RULE_fAbstraction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFAbstraction" ):
                return visitor.visitFAbstraction(self)
            else:
                return visitor.visitChildren(self)




    def fAbstraction(self):

        localctx = AeonParser.FAbstractionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fAbstraction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(AeonParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AeonParser.RULE_body

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BodyVarDefinitionContext(BodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AeonParser.BodyContext
            super().__init__(parser)
            self.varName = None # Token
            self.varType = None # TypeeContext
            self.exp = None # ExpressionContext
            self.copyFrom(ctx)
